target/classes/META-INF/jkube/openshift/spring-boot-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    jkube.io/git-url: https://github.com/antoniocipollaro/springoncloud.git
    app.openshift.io/vcs-uri: https://github.com/antoniocipollaro/springoncloud.git
    jkube.io/git-commit: 198feec66bf6d0ae053559b1876b2ad984144f3b
    jkube.io/git-branch: main
    jkube.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/spring-boot
    jkube.io/scm-tag: HEAD
  labels:
    testProject: spring-boot-sample
    app: spring-boot
    provider: jkube
    version: 1.1.0
    group: org.eclipse.jkube.quickstarts.maven
  name: spring-boot
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: spring-boot
    provider: jkube
    group: org.eclipse.jkube.quickstarts.maven
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-ref: main
        jkube.io/git-branch: main
        jkube.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/spring-boot
        jkube.io/git-url: https://github.com/antoniocipollaro/springoncloud.git
        app.openshift.io/vcs-uri: https://github.com/antoniocipollaro/springoncloud.git
        jkube.io/scm-tag: HEAD
        jkube.io/git-commit: 198feec66bf6d0ae053559b1876b2ad984144f3b
      labels:
        testProject: spring-boot-sample
        app: spring-boot
        provider: jkube
        version: 1.1.0
        group: org.eclipse.jkube.quickstarts.maven
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: spring-boot:1.1.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
          successThreshold: 1
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          successThreshold: 1
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: spring-boot:1.1.0
    type: ImageChange
