target/classes/META-INF/jkube/openshift/spring-boot-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    jkube.io/git-url: https://github.com/antoniocipollaro/springoncloud.git
    app.openshift.io/vcs-uri: https://github.com/antoniocipollaro/springoncloud.git
    jkube.io/git-commit: 198feec66bf6d0ae053559b1876b2ad984144f3b
    jkube.io/git-branch: main
    jkube.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/spring-boot
    jkube.io/scm-tag: HEAD
    prometheus.io/path: /metrics
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    testProject: spring-boot-sample
    app: spring-boot
    provider: jkube
    version: 1.1.0
    group: org.eclipse.jkube.quickstarts.maven
  name: spring-boot
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-boot
    provider: jkube
    group: org.eclipse.jkube.quickstarts.maven
  type: NodePort
