target/classes/META-INF/jkube/openshift/spring-boot-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    jkube.io/git-url: https://github.com/antoniocipollaro/springoncloud.git
    app.openshift.io/vcs-uri: https://github.com/antoniocipollaro/springoncloud.git
    jkube.io/git-commit: 7aa03d43fcb90e1a54870e1f13dce8477f2caf6a
    jkube.io/git-branch: main
    jkube.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/spring-boot
    jkube.io/scm-tag: HEAD
  labels:
    app: spring-boot
    provider: jkube
    version: 1.1.0
    group: org.eclipse.jkube.quickstarts.maven
  name: spring-boot
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spring-boot
